# OpenGL_Lighting

./: CMakeLists.txt  HW4.puuml.puml  Lights.cpp  Lights.h  cam.txt  diagram.tikz  main.cpp  main4.cpp  mainForTesting.cpp  tgsouthaHW4.cpp  tgsouthaHW4.h
src/: Camera.cpp  Camera.h  Camera.hpp  ColorData.cpp  ColorData.h  Coord.cpp  Coord.h  Coord.hpp  LeftVP.cpp  LeftVP.h  Objects.cpp  Objects.h  PlaneMesh.cpp  PlaneMesh.h  Scenedraw.cpp  Scenedraw.h  globals.cpp  globals.h  lighting.cpp  lighting.h  testingFunctions.cpp  testingFunctions.h  things.cpp  things.h
